src/objects/Customer_Survey__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>PM_Project__r.Sales_Order__r.AccountId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Helpfullness__c</fullName>
        <label>Billing Helpfullness</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultant_Appearance__c</fullName>
        <label>Consultant Appearance</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultant_Clarity__c</fullName>
        <label>Consultant Clarity</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultant_Followup__c</fullName>
        <label>Consultant Followup</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultant_Honesty__c</fullName>
        <label>Consultant Honesty</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultant_Knowledge__c</fullName>
        <label>Consultant Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Consultant_Responsiveness__c</fullName>
        <label>Consultant Responsiveness</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ease_of_Payment__c</fullName>
        <label>Ease of Payment</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electrician_Appearance__c</fullName>
        <label>Electrician Appearance</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electrician_Clarity__c</fullName>
        <label>Electrician Clarity</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electrician_Courtesy__c</fullName>
        <label>Electrician Courtesy</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electrician_Promptness__c</fullName>
        <label>Electrician Promptness</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electrician_Site_Cleanliness__c</fullName>
        <label>Electrician  Site Cleanliness</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Electrician_Workmanship__c</fullName>
        <label>Electrician Workmanship</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exceptional_Employee__c</fullName>
        <label>Exceptional Employee</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Favorite_Experience__c</fullName>
        <label>Favorite Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Financing_Coordination__c</fullName>
        <label>Financing Coordination</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Future_Reference_Agreement__c</fullName>
        <label>Future Reference Agreement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gift_Card_Sent_Date__c</fullName>
        <label>Gift Card Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HOA_Coordination__c</fullName>
        <label>HOA Coordination</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Improvement_Comments__c</fullName>
        <label>Improvement Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Send_Day__c</fullName>
        <formula>CASE(MOD( Survey_Date_Sent__c  - DATE(1900, 1, 6), 7), 0, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+1) + &apos; 11:00:00&apos;), 1, DATETIMEVALUE(TEXT( Survey_Date_Sent__c) + &apos; 11:00:00&apos;), 2,DATETIMEVALUE(TEXT( Survey_Date_Sent__c +1) + &apos; 20:00:00&apos;), 3, DATETIMEVALUE(TEXT( Survey_Date_Sent__c) + &apos; 20:00:00&apos;), 4, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+2) + &apos; 11:00:00&apos;), 5, DATETIMEVALUE(TEXT( Survey_Date_Sent__c+1) + &apos; 11:00:00&apos;), 6,DATETIMEVALUE(TEXT( Survey_Date_Sent__c+2) + &apos; 11:00:00&apos;),DATETIMEVALUE(TEXT( Survey_Date_Sent__c) + &apos; 11:00:00&apos;))</formula>
        <label>Initial Send Day</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Install_Appearance__c</fullName>
        <label>Install  Appearance</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Clarity__c</fullName>
        <label>Install  Clarity</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Courtesy__c</fullName>
        <label>Install  Courtesy</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Promptness__c</fullName>
        <label>Install  Promptness</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Site_Cleanliness__c</fullName>
        <label>Install  Site Cleanliness</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Install_Workmanship__c</fullName>
        <label>Install   Workmanship</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Reminder_Sent_Date__c</fullName>
        <label>Last Reminder Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Least_Favorite_Experience__c</fullName>
        <label>Least Favorite Experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_Recommendation_Numeric__c</fullName>
        <formula>IF( ISPICKVAL( Likelihood_of_Recommendation__c, &quot;0&quot;), 0,
 IF( ISPICKVAL( Likelihood_of_Recommendation__c, &quot;1&quot;), 1,
 IF( ISPICKVAL( Likelihood_of_Recommendation__c, &quot;2&quot;), 2,
 IF( ISPICKVAL( Likelihood_of_Recommendation__c, &quot;3&quot;), 3,
 IF( ISPICKVAL( Likelihood_of_Recommendation__c, &quot;4&quot;), 4,
 IF( ISPICKVAL( Likelihood_of_Recommendation__c, &quot;5&quot;), 5,
 IF( ISPICKVAL( Likelihood_of_Recommendation__c, &quot;6&quot;), 6,
 IF( ISPICKVAL( Likelihood_of_Recommendation__c, &quot;7&quot;), 7,
 IF( ISPICKVAL( Likelihood_of_Recommendation__c, &quot;8&quot;), 8,
 IF( ISPICKVAL( Likelihood_of_Recommendation__c, &quot;9&quot;), 9,
 IF( ISPICKVAL( Likelihood_of_Recommendation__c, &quot;10&quot;), 10,
0
)))))))))))</formula>
        <label>Likelihood of Recommendation Numeric</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Likelihood_of_Recommendation__c</fullName>
        <label>Likelihood of Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MD5Code__c</fullName>
        <description>MD5 Code for Id</description>
        <label>MD5Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_Experience__c</fullName>
        <label>Overall Experience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PL_Appearance__c</fullName>
        <label>PL  Appearance</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PL_Clarity__c</fullName>
        <label>PL Clarity</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PL_Commitments__c</fullName>
        <label>PL  Commitments</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PL_Concern_for_Needs__c</fullName>
        <label>PL Concern for Needs</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PL_Courtesy__c</fullName>
        <label>PL Courtesy</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PL_Knowledge__c</fullName>
        <label>PL Knowledge</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PM_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PM Project</label>
        <referenceTo>PM_Project__c</referenceTo>
        <relationshipLabel>Customer Surveys</relationshipLabel>
        <relationshipName>Customer_Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Process_Effectiveness__c</fullName>
        <label>Process Effectiveness</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Install_Speed__c</fullName>
        <label>Process Install Speed</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Paperwork_Ease__c</fullName>
        <label>Process Paperwork Ease</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Timeliness__c</fullName>
        <label>Process Timeliness</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Usefulness__c</fullName>
        <label>Process Usefulness</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Utility_Ease__c</fullName>
        <label>Process Utility Ease</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommendation_Reason__c</fullName>
        <label>Recommendation Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Proposal_Accuracy__c</fullName>
        <label>Sales Proposal Accuracy</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Proposal_Completeness__c</fullName>
        <label>Sales Proposal Completeness</label>
        <picklist>
            <picklistValues>
                <fullName>No Opinion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Very Good</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outstanding</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>